--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "vani-own",
+  "name": "azure-express-backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"No tests configured\" && exit 0",
-    "start": "NODE_ENV=production node app.js",
-    "dev": "nodemon app.js"
+    "start": "node server.js",
+    "dev": "nodemon"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^4.19.2"
   }
 }
