--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "microsoft-cognitiveservices-speech-sdk": "^1.43.1",
     "mongoose": "^7.6.3",
+    "router": "^2.2.0",
     "socket.io": "^4.7.2",
     "uuid": "^11.1.0"
   },
