--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "vani-backend-clean",
+  "name": "vani-backend",
   "version": "1.0.0",
   "description": "Clean backend for Vani chat application with real-time translation",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+  "test": "echo \"Error: no test specified\" && exit 0",
+  "start": "node app.js",
+  "dev": "nodemon app.js",
+  "lint": "eslint .",
+  "build": "echo \"Build complete\"",
+  "postinstall": "npm run build"
+},
 
-    "lint": "eslint .",
-    "build": "npm install",
-    "postinstall": "npm run build"
-  },
   "engines": {
-    "node": "18.x"
+    "node": ">=16.0.0"
   },
   "keywords": [],
   "author": "",
