--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,7 @@ services:
     buildCommand: npm install
     startCommand: node app.js
     envVars:
+      - key: NODE_ENV
+        value: production
       - key: NODE_VERSION
-        value: 18.x
+        value: 18.0.0
