--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "postinstall": "npm run build"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": "18.x"
   },
   "keywords": [],
   "author": "",
